<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.coursera.gvalerio.tareasemana2.EditarActivity"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tLNombreCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tINombreCompleto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_completo"
                    />

            </android.support.design.widget.TextInputLayout>

            <DatePicker
                android:id="@+id/dpFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tLNombreCompleto"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:layout_centerHorizontal="true"></DatePicker>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tLTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dpFecha"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tITelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefono"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tLEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tLTelefono"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tIEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    >

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tLDescripcionContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tLEmail"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tIDescripcionContacto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripcion_contacto"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSiguiente"
                android:theme="@style/MiRaisedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSiguiente"
                android:layout_below="@id/tLDescripcionContacto"
                />

    </RelativeLayout>
</ScrollView>
